Switches main classes to URI class (issue #79)